# rust_cpuburn

./: Cargo.toml  Dockerfile  Dockerfile.release  README.md  slurm_cpuburn.sh
src/: main.rs
