[package]
name = "cpuburn"
version = "0.1.0"
edition = "2021"
description = "cpuburn is a tool to push your CPU to 100%"
authors = ["Erik Hollensbe <git@hollensbe.org>"]
license = "MIT"
homepage = "https://github.com/erikh/cpuburn"
repository = "https://github.com/erikh/cpuburn"
keywords = [ "performance", "stress", "testing" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "^1"
